@@ -939,6 +939,7 @@ __ZN7WebCore30overrideUserPreferredLanguagesERKN3WTF6VectorINS0_6StringELm0ENS0_
 __ZN7WebCore31CrossOriginPreflightResultCache5emptyEv
 __ZN7WebCore31CrossOriginPreflightResultCache6sharedEv
 __ZN7WebCore33stripLeadingAndTrailingHTMLSpacesERKN3WTF6StringE
+__ZN7WebCore36standardUserAgentWithApplicationNameERKN3WTF6StringES3_
 __ZN7WebCore37WidgetHierarchyUpdatesSuspensionScope11moveWidgetsEv
 __ZN7WebCore37WidgetHierarchyUpdatesSuspensionScope35s_widgetHierarchyUpdateSuspendCountE
 __ZN7WebCore3URL10invalidateEv
@@ -2084,7 +2085,6 @@ __ZN7WebCore34contextMenuItemTagDefaultDirectionEv
 __ZN7WebCore35contextMenuItemTagShowSpellingPanelEb
 __ZN7WebCore35contextMenuItemTagShowSubstitutionsEb
 __ZN7WebCore35contextMenuItemTagSubstitutionsMenuEv
-__ZN7WebCore36standardUserAgentWithApplicationNameERKN3WTF6StringES3_
 __ZN7WebCore37contextMenuItemTagTransformationsMenuEv
 __ZN7WebCore38contextMenuItemTagWritingDirectionMenuEv
 __ZN7WebCore42contextMenuItemTagCheckGrammarWithSpellingEv
@@ -2529,8 +2529,11 @@ __ZNK7WebCore9RenderBox11borderRadiiEv
 _webThreadShouldYield
 _wkExecutableWasLinkedOnOrAfterIOSVersion
 _wkGetDeviceClass
+_wkGetDeviceName
 _wkGetPlatformNameForNavigator
 _wkGetScreenScaleFactor
+_wkGetOSNameForUserAgent
+_wkGetUserAgent
 _wkGetVendorNameForNavigator
 _wkGetVerticalGlyphsForCharacters
 _wkGetViewportScreenSize
