@@ -1,5 +1,13 @@
 2014-01-15  Benjamin Poulain  <bpoulain@apple.com>
 
+        Fix the iOS build after r162114
+
+        Unreviewed.
+
+        * WebView/WebViewPrivate.h: I forgot to remove the declaration, fix that.
+
+2014-01-15  Benjamin Poulain  <bpoulain@apple.com>
+
         Move user agent code to WebCore and unify some code between OS X and iOS
         https://bugs.webkit.org/show_bug.cgi?id=127080
 
